# cppCmakeTemplates

./: CMakeLists.txt  README.md  gitPush.sh
cppBasic/: CMakeLists.txt
cppBasic/include/: add.h
cppBasic/src/: add.cc  main.cc
src/: main.cpp
